--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "axios": "^1.2.1",
     "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "vue": "^3.2.13",
+    "vue-cookie": "^1.1.4",
+    "vue-cookies": "^1.8.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
