--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,8 @@
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
     "vue-cookie": "^1.1.4",
-    "vue-cookies": "^1.8.2"
+    "vue-cookies": "^1.8.2",
+    "vue3-timepicker": "^1.0.0-beta.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
