--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "vue": "^3.2.13",
     "vue-cookie": "^1.1.4",
     "vue-cookies": "^1.8.2",
+    "vue-router": "^4.1.6",
     "vue3-timepicker": "^1.0.0-beta.2"
   },
   "devDependencies": {
